Bump as 3.0, migrate to archtiectury runtime transformer